[package]
name = "webhashtag-rust-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "webhashtag_rust_server"
path = "src/lib.rs"

[[bin]]
name = "webhashtag-rust-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hex = "0.4"
html-escape = "0.2"
multibase = "0.9"
redb = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
url = "2"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
urlencoding = "2"
